--- a/fibonacci_generator.ipynb
+++ b/fibonacci_generator.ipynb
@@ -32,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing tracemalloc module\n",
     "import tracemalloc"
    ]
   },
@@ -128,6 +129,13 @@
     "print(f\"Current memory usage is {current / 10**6}MB; Peak was {peak / 10**6}MB\")\n",
     "tracemalloc.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
